Editor/Test/ok/files/New in ver x + users etc/QM 2.3.5/test CsScript/rejected/test CsScript directives/test CsScript Compile2.cs
/exe
 out

str code=
 using System;
 public class Cee{
 public static void Kee()
 {
 Console.Write("kee");
 }}

 PF
CsScript x.Init
PF
 PN
x.Compile(code F"q:\my qm\test\cs2.dll")
PN
PO
